--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="yourCssClass" *ngIf="visible" (click)="isButtonVisible()">
     <button 
 routerLink="/question1">Start Quiz</button>
