--- a/src/app/question2/question2.component.html
+++ b/src/app/question2/question2.component.html
@@ -1,20 +1,26 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="progress" >
     <div class="progress-bar bg-secondary"style="width:{{value}}"></div>
   </div>
 <div class="container">
     <h3 >Question 2 of 20</h3>
-    <p>Entertainment: Video Games</p>    
+    <p>Entertainment: Video Games</p>
+    <span class="fa fa-star "></span>
+    <span class="fa fa-star "></span>
+    <span class="fa fa-star "></span>
+    <span class="fa fa-star "></span>
+    <span class="fa fa-star ch"></span>     
     <h5 >What is the scientific name for modern day humans?"</h5>
     <div class="row">
         <div class="col-sm-4">
             <button  class="rounded text-center w-50 mt-4 mr-3 " style="background-color:lightgrey;border: 1px solid black;"
-            (click)= "correctOpt()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
+            (click)= "correctOpt()" (click)=" questionCount()"  (click)="per()" (click)="count()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
             >Homo Sapiens</button>
         </div>
         <div class="col-sm-4">
             <button class="rounded text-center w-50 mt-4" style="background-color:lightgrey;border: 1px solid black;"
             
-            (click)="wrongOpt()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
+            (click)="wrongOpt()"  (click)="questionCount()" (click)="per()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
           
             >Homo Ergaster</button>
         </div>
@@ -22,12 +28,12 @@
     <div class="row">
         <div class="col-md-4">
                <button class="rounded text-center w-50 mt-4" style="background-color:lightgrey;border: 1px solid black;"
-               (click)="wrongOpt()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
+               (click)="wrongOpt()" (click)="per()" (click)="questionCount()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
                >Homo Erectus</button>
         </div>
         <div class="col-md-4">
                  <button class="rounded text-center w-50 mt-4 " style="background-color:lightgrey;border: 1px solid black;"
-                 (click)="wrongOpt()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
+                 (click)="wrongOpt()"  (click)="questionCount()" (click)="per()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
                  >Homo Neanderthalensis</button>
         </div>
     </div>
@@ -35,13 +41,17 @@
             <h3 style="margin-left: 200px;" class="mt-4">{{wrong}}</h3>
             <p *ngIf="showNext">
             <button type="button" style="margin-left: 190px; background-color:lightgrey;border: 1px solid black;width: 150px;"
-            routerLink="/question3"
+            routerLink="/question3" 
             class="rounded text-center ">Next</button>
         </p>
+     
   <footer style="margin-top: 200px;">
+    <p>Score:{{percentage}}</p>
+   
     <div class="progress mt-5 w-50 rounded" style="height: 25px;">
         <div class="progress-bar bg-dark" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
         <div class="progress-bar bg-secondary" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+      
         <div class="progress-bar bg-gradient-secondary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
 <!--  -->
