--- a/src/app/question5/question5.component.html
+++ b/src/app/question5/question5.component.html
@@ -4,31 +4,36 @@
   </div>
 <div class="container">
     <h3 >Question 4 of 20</h3>
-    <p>Entertainment: Video Games</p>    
+    <p>Entertainment: Video Games</p>  
+    <span class="fa fa-star "></span>
+    <span class="fa fa-star "></span>
+    <span class="fa fa-star "></span>
+    <span class="fa fa-star "></span>
+    <span class="fa fa-star ch"></span>   
     <h5 >Who is the creator of the comic series 'The Walking Dead'?</h5>
     <div class="row">
         <div class="col-sm-4">
             <button  class="rounded text-center w-50 mt-4 mr-3 " style="background-color:lightgrey;border: 1px solid black;"
-             (click)="wrongOpt()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
+             (click)="wrongOpt()" (click)="questionCount()" (click)="per()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
             >Stan Lee</button> 
         </div>
         <div class="col-sm-4">
             <button class="rounded text-center w-50 mt-4" style="background-color:lightgrey;border: 1px solid black;"
             
           [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
-          (click)= "correctOpt()"  
+          (click)= "correctOpt()" (click)="count()" (click)="per()" (click)="questionCount()"
             >Robert Kirkman</button>
         </div>
     </div>
     <div class="row">
         <div class="col-md-4">
                <button class="rounded text-center w-50 mt-4" style="background-color:lightgrey;border: 1px solid black;"
-               (click)="wrongOpt()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
+               (click)="wrongOpt()" (click)="questionCount()" (click)="per()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
                >Malcolm Wheeler-Nicholson</button>
         </div>
         <div class="col-md-4">
                  <button class="rounded text-center w-50 mt-4 " style="background-color:lightgrey;border: 1px solid black;"
-                 (click)="wrongOpt()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
+                 (click)="wrongOpt()" (click)="per()"  (click)="questionCount()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
                  >Robert Crumb</button>
         </div>
     </div>
@@ -36,13 +41,16 @@
             <h3 style="margin-left: 200px;" class="mt-4">{{wrong}}</h3>
             <p *ngIf="showNext">
             <button type="button" style="margin-left: 190px; background-color:lightgrey;border: 1px solid black;width: 150px;"
-             routerLink="/question6"
+             routerLink="/question6" 
             class="rounded text-center ">Next</button>
         </p>
+        <p>Score:{{percentage}}</p>
   <footer style="margin-top: 200px;">
     <div class="progress mt-5 w-50 rounded" style="height: 25px;">
-        <div class="progress-bar bg-dark" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-        <div class="progress-bar bg-secondary" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+        <!-- <div class="progress-bar bg-dark" role="progressbar" width="{{value}}" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+         -->
+         <div class="progress-bar bg-secondary"style="width:{{value}}"></div>
+        <div class="progress-bar bg-secondary" role="progressbar" style="widows: 15%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
         <div class="progress-bar bg-gradient-secondary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
 <!--  -->
