--- a/src/app/question9/question9.component.html
+++ b/src/app/question9/question9.component.html
@@ -1,47 +1,48 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="progress" >
     <div class="progress-bar bg-secondary"style="width:{{value}}"></div>
   </div>
+
 <div class="container">
-    <h3 >Question 3 of 20</h3>
-    <p>Entertainment: Video Games</p> 
+    <h3 >Question 9 of 20</h3>
+    <p>General Knowledge</p>    
     <span class="fa fa-star "></span>
     <span class="fa fa-star "></span>
     <span class="fa fa-star "></span>
     <span class="fa fa-star "></span>
-    <span class="fa fa-star ch"></span>    
-    <h5 >What is Ron Weasley's middle name?</h5>
+    <span class="fa fa-star"></span> 
+    <h5 >In 2013 how much money was lost by Nigerian scams?</h5>
     <div class="row">
         <div class="col-sm-4">
             <button  class="rounded text-center w-50 mt-4 mr-3 " style="background-color:lightgrey;border: 1px solid black;"
              (click)="wrongOpt()" (click)="questionCount()" (click)="per()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
-            >Arthur</button> 
+            >$95 Million</button> 
         </div>
         <div class="col-sm-4">
             <button class="rounded text-center w-50 mt-4" style="background-color:lightgrey;border: 1px solid black;"
             
           [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
-          (click)= "correctOpt()" (click)="count()" (click)="per()" (click)="questionCount()" 
-            >Bilius</button>
+           (click)="wrongOpt()" (click)="questionCount()" (click)="per()"
+            >$956 Million</button>
         </div>
     </div>
     <div class="row">
         <div class="col-md-4">
                <button class="rounded text-center w-50 mt-4" style="background-color:lightgrey;border: 1px solid black;"
-               (click)="wrongOpt()" (click)="questionCount()" (click)="per()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
-               >John</button>
+               [disabled]="clicked" (click)="questionCount()" (click)="per()"  (click)= "correctOpt()" (click)="count()"  (click)="actionMethod(); clicked = true;" (click)="nextBut()"
+               >$12.7 Billion</button>
         </div>
         <div class="col-md-4">
                  <button class="rounded text-center w-50 mt-4 " style="background-color:lightgrey;border: 1px solid black;"
                  (click)="wrongOpt()" (click)="questionCount()" (click)="per()" [disabled]="clicked" (click)="actionMethod(); clicked = true;" (click)="nextBut()"
-                 >Dominic</button>
+                 >$2.7 Billion</button>
         </div>
     </div>
             <h3  style="margin-left: 200px;" class="mt-4">{{correct}}</h3>
             <h3 style="margin-left: 200px;" class="mt-4">{{wrong}}</h3>
             <p *ngIf="showNext">
             <button type="button" style="margin-left: 190px; background-color:lightgrey;border: 1px solid black;width: 150px;"
-            routerLink="/question5" 
+            routerLink="/question10"
             class="rounded text-center ">Next</button>
         </p>
         <p>Score:{{percentage}}</p>
@@ -56,3 +57,5 @@
     
 
 </div>
+
+
